[metadata]
name = spotify_tensorflow
summary = Spotify specific helpers for TensorFlow
description-file = README.md
url = https://github.com/spotify/spotify-tensorflow
license = Apache-2
requires-python = >=3.0
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords =
    tensorflow
    utils

[files]
packages =
    spotify_tensorflow

[options.extras_require]
tensorflow = tensorflow==1.7.0
tensorflow_gpu = tensorflow-gpu==1.7.0

[global]
tests_require = tox>=3.0.0
setup_requires = pbr>=1.3
setup-hooks = pbr.hooks.setup_hook
# need to use sth else than test due to https://bugs.launchpad.net/pbr/+bug/1300381
commands = setup.tox

[flake8]
max-line-length = 100
format = pylint
statistics = 1
show-source = 1
exclude = build,.git,.circleci,.coverage,.eggs,.gitignore,.idea,coverage,dist,*.egg*,venv,venv_py3,.tox,__pycache__
inline-quotes = "
multiline-quotes = "
accept-encodings = utf-8
import-order-style = pep8

[nosetests]
with-coverage = 1
cover-package = spotify_tensorflow
cover-inclusive = 1
cover-xml = 1
cover-xml-file = coverage/coverage.xml

[mypy]
python_version = 2.7
ignore_missing_imports = True
