[metadata]
name = spotify_tensorflow
summary = Spotify specific helpers for TensorFlow
description-file = README.md
url = https://github.com/spotify/spotify-tensorflow
license = Apache-2
requires-python = >=3.0
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
keywords =
    tensorflow
    utils

[files]
packages =
    spotify_tensorflow

[options.extras_require]
tensorflow = tensorflow==1.10.1
tensorflow_gpu = tensorflow-gpu==1.10.1

[global]
tests_require =
    tox>=3.0.0
    tox-venv
setup-hooks = pbr.hooks.setup_hook

[flake8]
max-line-length = 100
format = pylint
statistics = 1
show-source = 1
exclude =
    .circleci,
    .coverage,
    .eggs,
    .git,
    .gitignore,
    .idea,
    .tox,
    *.egg*,
    __pycache__
    build,
    coverage,
    dist,
    venv*,
inline-quotes = "
multiline-quotes = "
accept-encodings = utf-8
import-order-style = pep8

[nosetests]
with-coverage = 1
cover-package = spotify_tensorflow
cover-inclusive = 1
cover-xml = 1
cover-xml-file = coverage/coverage.xml

[mypy]
python_version = 2.7
ignore_missing_imports = True
