[metadata]
name = spotify_tensorflow
summary = Spotify-specific helpers for TensorFlow
description-file = README.md
url = https://github.com/spotify/spotify-tensorflow
license = Apache-2
requires-python = >=2.7,<3
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
keywords =
    tensorflow
    utils

[files]
packages =
    spotify_tensorflow

[extras]
tensorflow = 
    tensorflow==1.9.0
tensorflow_gpu = 
    tensorflow-gpu==1.9.0
tfx =
    luigi>=2.3.3,<3.0.0
    google-api-python-client>=1.5.4,<2.0
    oauth2client<4.0.0
    tensorflow-data-validation==0.11.0
    tensorflow-transform
examples =
    scipy
    sklearn
    xgboost
testing =
    coverage
    nose>=1.3.7
    responses
lint =
    flake8==3.6.0
    flake8-quotes==1.0.0
    flake8-coding==1.3.1
    flake8-import-order==0.18

[entry_points]
console_scripts =
    tfr-read = spotify_tensorflow.scripts.tfr_read:main

[global]
tests_require =
    tox>=3.3.0
    tox-venv
setup-hooks = pbr.hooks.setup_hook

[flake8]
max-line-length = 100
format = pylint
statistics = 1
show-source = 1
inline-quotes = "
multiline-quotes = "
accept-encodings = utf-8
import-order-style = pep8

[nosetests]
with-coverage = 1
cover-package = spotify_tensorflow
cover-inclusive = 1
cover-xml = 1
cover-xml-file = coverage/coverage.xml

[mypy]
python_version = 2.7
ignore_missing_imports = True
